chore: 테스트 통과 되도록 수정